adding the hero section in the landing page

--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
                 <li>Collection</li>
             </a>
             <a href="">
-                <li>Forum</li>
-            </a>
-            <a href="">
                 <li>Most played</li>
             </a>
         </ul>
-        <div style="position: relative;">
+        <form style="position: relative;">
             <button id="search"><img src="images/search_24dp_F3F3F3_FILL0_wght500_GRAD0_opsz24.svg"></button>
             <input type="text" placeholder="Search for games">
-        </div>
+        </form>
         <a href="" id="Wishlist"><img src="images/favorite_24dp_F3F3F3_FILL0_wght400_GRAD0_opsz24.svg" alt="">Wishlist</a>
     </div>
+
+        <section >
+            <img src="images/landing.webp" alt="">
+            <button>Get Started</button>
+
+        </section>
+
+    
     <script src="script.js"></script>
 </body>
 
