--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 
 <body>
+    <div class="fakeheader"></div>
     <header>
         <ul>
             <a href=""><img src="images/logogm-removebg-preview.png" alt="logo" id="logo"></a>
             <a href="">
-                <li>STORE</li>
+                <li>PREMIUM</li>
             </a>
             <a href="" style="display: flex;">
                 <li>DOWLOAD</li> <img src="images/download_24dp_F3F3F3_FILL0_wght500_GRAD0_opsz24.svg" alt="">
             </a>
             <a href="" style="display: flex;">
-                <li>SUPPORT</li><img src="images/headset_mic_24dp_F3F3F3_FILL0_wght500_GRAD0_opsz24.svg" alt="">
+                <li>Dashboard</li><img src="images/headset_mic_24dp_F3F3F3_FILL0_wght500_GRAD0_opsz24.svg" alt="">
             </a>
         </ul>
         <button><img src="images/person_24dp_F3F3F3_FILL1_wght400_GRAD0_opsz24.svg" alt="">Log In</button>
@@ -35,23 +36,185 @@
                 <li>Collection</li>
             </a>
             <a href="">
-                <li>Most played</li>
+                <li>Feedbacks</li>
             </a>
         </ul>
         <form style="position: relative;">
             <button id="search"><img src="images/search_24dp_F3F3F3_FILL0_wght500_GRAD0_opsz24.svg"></button>
             <input type="text" placeholder="Search for games">
         </form>
-        <a href="" id="Wishlist"><img src="images/favorite_24dp_F3F3F3_FILL0_wght400_GRAD0_opsz24.svg" alt="">Wishlist</a>
+        <a href="" id="Wishlist">View
+            Profile</a>
     </div>
 
-        <section >
-            <img src="images/landing.webp" alt="">
-            <button>Get Started</button>
+    <section>
+        <img src="images/landing.webp" alt="">
+        <button>Get Started</button>
+    </section>
 
-        </section>
+    <main >
+        <h2 class="">MMO & MMORPG games</h2>
+        <div class="slider-mmo scroll">
 
-    
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                    <h3>League of legends</h3>
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/leagueg.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+        </div>
+
+        <div class="space ">
+            <!-- <h1>Assassin creed seies</h1> -->
+            <img src="images/assassincrd.jpg" id="background">
+            <div class="small-slider">
+                <div class="ss-container scroll">
+                    <img src="images/origin.png" class="aside">
+                    <div class="overlay">
+                    </div>
+                </div>
+                <div class="ss-container scroll">
+                    <img src="images/valhalla.jpg" class="aside">
+                    <div class="overlay">
+                    </div>
+                </div>
+                <div class="ss-container scroll">
+                    <img src="images/odyssey.jpg" class="aside">
+                    <div class="overlay"></div>
+                </div>
+                <div class="ss-container scroll">
+                    <img src="images/syndicate.jpg" class="aside">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="scroll">FPS games</h2>
+        <div class="slider-mmo">
+
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                    <h3>Valorant</h3>
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/valorant-1640045685890.jpg" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+        </div>
+
+        <h2 class="scroll">Battleground games</h2>
+        <div class="slider-mmo">
+
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                    <h3>PUBG Battleground</h3>
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+            <div class="image-container scroll">
+                <img src="images/pubg-battlegrounds-17zb2.png" alt="">
+                <div class="overlay">
+                </div>
+            </div>
+        </div>
+    </main>
+
+
     <script src="script.js"></script>
 </body>
 
